# pytest-freezegun

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  HACKING.md  README.rst  appveyor.yml  mkdocs.yml  pytest_freezegun.py  setup.cfg  setup.py  tox.ini
docs/: index.md
tests/: test_freezegun.py
