[metadata]
name = pytest-freezegun
version = 0.3.0.post1
description = Wrap tests with fixtures in freeze_time
long_description = file:README.rst
author = Tomasz Kontusz
author_email = tomasz.kontusz@gmail.com
maintainer = Tomasz Kontusz
maintainer_email = tomasz.kontusz@gmail.com
license = MIT
url = https://github.com/ktosiek/pytest-freezegun
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
zip_safe = True
py_modules =
    pytest_freezegun
install_requires =
    freezegun>0.3
    pytest>=3.0.0

[options.entry_points]
pytest11 =
    freezegun = pytest_freezegun

[sdist]
formats = zip

[bdist_wheel]
universal = 1
